# zsdtdx

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  MANIFEST.in  PERFORMANCE_REPORT.md  README.md  THIRD_PARTY_NOTICES.md  do_release.ps1  patch_dist.py  pyproject.toml  upload_pypi.ps1  upload_pypi2.ps1  upload_pypi3.ps1
examples/: README.md  benchmark_async_200x5x15.py  benchmark_full_compare_200x5x15.py  benchmark_sync_200x5x15.py  benchmark_sync_async_200x5x15.py  benchmark_taskset_200x5x15.json  benchmark_three_runs_compare_200x5x15.py  benchmark_three_runs_compare_200x5x15_result.json  generate_benchmark_taskset_1000x5x15.py  generate_benchmark_taskset_200x5x15.py  ip_pool_000001_15min_probe.json  probe_pytdx_standard_hosts.py  run_async_1000x5x15_check_connection.config.yaml  run_async_1000x5x15_check_connection.py  run_async_1000x5x15_dump_queue_results.py  run_index_kline_sync_async_demo.py  sync_async_benchmark_1000x5x15.py  test_chunk_timeout_retry.py  test_output.txt  test_simple_api.py
examples/diagrams/: connection_lifecycle_sequence.mmd
src/zsdtdx/: __init__.py  base_socket_client.py  config.yaml  errors.py  exhq.py  heartbeat.py  helper.py  hq.py  index_route_disk_cache.py  log.py  parallel_fetcher.py  params.py  simple_api.py  unified_client.py
src/zsdtdx/parser/: README.md  __init__.py  base.py  diff_kline_page.py  ex_get_history_instrument_bars_range.py  ex_get_history_minute_time_data.py  ex_get_history_transaction_data.py  ex_get_instrument_bars.py  ex_get_instrument_count.py  ex_get_instrument_info.py  ex_get_instrument_quote.py  ex_get_instrument_quote_list.py  ex_get_markets.py  ex_get_minute_time_data.py  ex_get_transaction_data.py  ex_setup_commands.py  get_company_info_category.py  get_company_info_content.py  get_finance_info.py  get_history_minute_time_data.py  get_history_transaction_data.py  get_index_bars.py  get_report_file.py  (+9 more)
tests/: README.md  test_async_kline_tuning_regression.py  test_availability_hosts_cache.py  test_code_quality_refactor.py  test_index_kline_async.py  test_index_route_disk_cache.py  test_pytdx_alignment.py  test_same_connection_retry_e2e.py  test_simple_api_retry_e2e.py  test_user_acceptance_tcp_config.py
tests/manual/: README.md  analyze_stock_kline_ohlcva_diff.py  probe_kline_pagination_direction.py  probe_pytdx_standard_hosts.py  run_stock_kline_async_full_compare.py  smoke_index_kline_sync_async_demo.py  stock_kline_async_full_compare_config.yaml  test_chunk_timeout_retry.py  verify_zz2000_1315_bar.py  weaknet_inject_retry.py
(+4 files in other folders)
