[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zsdtdx"
version = "0.1.0"
description = "Unified wrapper around pytdx-style market data APIs."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pandas",
    "PyYAML",
    "six",
    "psutil",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["zsdtdx*"]

[tool.setuptools.package-data]
zsdtdx = ["config.yaml"]
