[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zsdtdx"
version = "1.4.9"
description = "Unified wrapper around pytdx-style market data APIs."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "pandas",
    "PyYAML",
    "six",
    "psutil",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "zsdtdx.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["manual", ".git", "dist", "build", ".venv", "venv"]
